# cli-agent-orchestrator

./: .coverage-baseline.json  .gitignore  CHANGELOG.md  CODEBASE.md  CODEBASE_zh.md  CONTEXT.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  index.html  main.js  preload.js  pyproject.toml
.github/workflows/: ci.yml  test-antigravity-cli-provider.yml
cao_mcp_apps/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.agent.ts  vite.config.dashboard.ts  vite.config.events.ts  vite.config.ts  vitest.config.ts
cao_mcp_apps/.husky/: pre-commit  pre-push
cao_mcp_apps/e2e/: agent.spec.ts  dashboard.spec.ts  event-stream.spec.ts  host.html  host.js  server.mjs
cao_mcp_apps/scripts/: check-bundle-size.mjs  coverage-ratchet.mjs  record-demo.mjs  scan-jit.mjs
design-tokens/: gen.mjs  status.json  tokens.json
desktop/: DESIGN.md  index.html  main.js  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
desktop/assets/: icon.icns
desktop/electron/: ipc.ts  main.ts  preload.ts  server.ts  settings.ts  state.ts  window.ts  workspaces.ts
desktop/src/: App.tsx  ServerDebugWindow.tsx  TerminalPane.tsx  api.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
docs/: agent-profile.md  antigravity-cli.md  api.md  claude-code.md  configuration.md  cursor-cli.md  flows.md  herdr.md  kimi-cli.md  mcp-apps-followups.md  mcp-apps.md  memory.md  settings.md  skills.md  tool-restrictions.md  web-ui.md
docs/adr/: 0001-workspace-scoped-desktop-servers.md  0002-desktop-uses-one-default-session-per-workspace.md  0003-desktop-closes-workspace-agents.md  0004-configurable-cao-home-for-workspaces.md  0005-desktop-first-targets-macos.md  0006-desktop-uses-host-installed-cao-server.md  0007-electron-desktop-shell.md
docs/media/: mcp-apps-demo.webm
docs/zh/: RELEASING.md  agent-profile.md  api.md  claude-code.md  codespaces.md  codex-cli.md  control-planes.md  copilot-cli.md  cursor-cli.md  devcontainer-feature.md  event-driven-architecture.md  external-tool-integration.md  flows.md  gemini-cli.md  herdr.md  hermes.md  inbox-delivery.md  kimi-cli.md  kiro-cli.md  memory.md  opencode-cli.md  plugins.md  settings.md  skills.md  terminal-lifecycle.md  tmux.md  tool-restrictions.md  web-ui.md  working-directory.md  代码阅读.md
examples/assign/: README.md
examples/cross-provider/: README.md  cross_provider_supervisor.md
examples/fleet/: .gitignore  README.md  fleet.example.json
examples/mcp-apps/: README.md
scripts/: sync_skills.py  vendor_ext_apps_skills.py
skills/cao-mcp-apps/: SKILL.md
skills/cao-memory/: SKILL.md
skills/cao-session-management/: SKILL.md
skills/cao-supervisor-protocols/: SKILL.md
skills/cao-worker-protocols/: SKILL.md
skills/mcp-apps-builder/: SKILL.md
skills/workflow-author/: SKILL.md
src/cli_agent_orchestrator/: constants.py
test/: README.md  test_constants.py  test_docs_canonical_links.py  test_http_only_boundary.py  test_skill_packaging_parity.py
test/api/: test_api_endpoints.py  test_api_profiles.py  test_events_endpoints.py  test_oauth_prm.py  test_scope_coverage.py  test_settings_api.py  test_terminals.py  test_workflow_endpoints.py  test_workflow_runs.py
test/backends/: test_factory.py
test/cli/: test_main.py
test/clients/: test_tmux_client.py  test_workflow_index_migration.py
test/e2e/: conftest.py  test_allowed_tools.py  test_assign.py  test_cross_provider.py  test_handoff.py  test_send_message.py  test_skills.py  test_supervisor_orchestration.py
test/ext_apps/: test_apps.py  test_sep2133.py  test_widget.py
test/mcp_server/: test_answer_user_prompt.py  test_app_tools.py  test_assign.py  test_load_skill.py  test_utils.py  test_workflow_return.py  test_workflow_tools.py
test/models/: test_workflow.py
test/ops_mcp_server/: test_server.py
test/providers/: README.md  conftest.py  test_antigravity_cli_unit.py  test_claude_code_coverage.py  test_claude_code_unit.py  test_copilot_cli_unit.py  test_kimi_cli_unit.py  test_kiro_cli_integration.py  test_kiro_cli_unit.py  test_memory_injection.py  test_native_status_shared.py  test_opencode_cli_unit.py  test_provider_manager_unit.py
test/security/: test_auth.py
test/services/: test_audit_log.py  test_config_service.py  test_event_bus.py  test_event_log_service.py  test_event_primitives.py  test_fifo_reader.py  test_install_service.py  test_memory_service.py  test_scoring.py  test_secret_gate.py  test_settings_service.py  test_sse_bus.py  test_status_monitor.py  test_step_output_store.py  test_terminal_service_full.py  test_ui_state_service.py  test_wiki_healer.py  test_wiki_lint.py  (+2 more)
web/: README.md  tailwind.config.js  tailwind.preset.cjs
(+136 files in other folders)
