[project]
name = "cli-agent-orchestrator"
version = "2.2.0"
description = "CLI Agent Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "AWS Labs" },
]
keywords = ["ai", "agents", "orchestration", "multi-agent", "tmux", "mcp", "cli", "codex", "claude-code", "kiro", "kimi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.104.0",
    # Upper bound: ext_apps/sep2133.advertise_capability monkey-patches a FastMCP
    # internal (create_initialization_options); cap the major to avoid silent
    # breakage on a new major release. Tested against 3.x.
    "fastmcp>=2.14.0,<4.0.0",
    # SOCKS proxy support for the httpx client FastMCP creates at cao-mcp-server
    # startup (version-update check). Without it, hosts behind a SOCKS proxy
    # (ALL_PROXY=socks5://...) crash with "-32000" on MCP connect.
    "socksio>=1.0.0",
    "mcp>=1.23.0",
    "pydantic>=2.10.6",
    "apscheduler>=3.10.4",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "libtmux>=0.51.0",
    "click>=8.0.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.0",
    "rank-bm25>=0.2.2",
    "pyte>=0.8.2",
    # JWT/JWKS verification for the default-off OAuth 2.1 auth layer (RS256 via
    # JWKS). The [crypto] extra pulls in `cryptography` for RSA signature
    # verification and provides `jwt.PyJWKClient`. See spec task 9.1 research note.
    "pyjwt[crypto]>=2.8.0",
    "jsonschema>=4.25",
]

[project.scripts]
"cao" = "cli_agent_orchestrator.cli.main:cli"
"cao-server" = "cli_agent_orchestrator.api.main:main"
"cao-mcp-server" = "cli_agent_orchestrator.mcp_server.server:main"
"cao-ops-mcp-server" = "cli_agent_orchestrator.ops_mcp_server.server:main"

[project.entry-points."cao.plugins"]
claude_code_memory = "cli_agent_orchestrator.plugins.builtin.claude_code_memory:ClaudeCodeMemoryPlugin"
kiro_cli_memory = "cli_agent_orchestrator.plugins.builtin.kiro_cli_memory:KiroCliMemoryPlugin"
codex_memory = "cli_agent_orchestrator.plugins.builtin.codex_memory:CodexMemoryPlugin"
event_log_publisher = "cli_agent_orchestrator.plugins.builtin.event_log_publisher:EventLogPublisher"
mcp_apps = "cli_agent_orchestrator.plugins.builtin.mcp_apps:McpAppsPlugin"

[project.urls]
Homepage = "https://github.com/awslabs/cli-agent-orchestrator"
Repository = "https://github.com/awslabs/cli-agent-orchestrator"
Issues = "https://github.com/awslabs/cli-agent-orchestrator/issues"
Documentation = "https://github.com/awslabs/cli-agent-orchestrator#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_agent_orchestrator"]

[tool.hatch.build]
artifacts = [
    "src/cli_agent_orchestrator/web_ui/**",
    # Single-file MCP App bundles emitted by `cao_mcp_apps` (npm run build:all).
    # Shipped so cao-mcp-server can serve the ui://cao/* resources from the wheel.
    "src/cli_agent_orchestrator/ext_apps/apps_static/**",
    # Vanilla topology widget bundle (committed; no build step) served at
    # /widgets/topology/ and as the cao://widget/topology MCP resource.
    "src/cli_agent_orchestrator/ext_apps/static/**",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "2.1.1"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
markers = [
    "asyncio: marks tests that use asyncio",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
asyncio_mode = "strict"
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing -m 'not e2e'"
